--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@unly/iso3166-1": "^1.0.2",
     "abcjs": "^6.1.7",
     "accept-language-parser": "^1.5.0",
-    "antd": "5.0.7",
+    "antd": "^5.1.6",
     "async": "^3.2.4",
     "aws-sdk": "^2.1276.0",
     "axios": "^1.2.1",
