EDU-1063 Correct tab text

--- a/src/components/pages/room.yml
+++ b/src/components/pages/room.yml
@@ -8,7 +8,7 @@ documentsTabTitle:
   en: Documents ({count})
   de: Dokumente ({count})
 membersTabTitle:
-  en: members ({count})
+  en: Members ({count})
   de: Mitglieder ({count})
 settingsTabTitle:
   en: Settings
