EDU-1067 Change translation and improve filter field

--- a/src/components/resource-picker/storage-location.yml
+++ b/src/components/resource-picker/storage-location.yml
@@ -6,7 +6,7 @@ filesView_list:
   de: Listenansicht
 filesView_grid:
   en: Grid view
-  de: Grid-Ansicht
+  de: Kachelansicht
 privateStorageMessage:
   en: Private directory
   de: Privates Verzeichnis
