EDU-1035 Rename user to account where applicable and reorganize files

--- a/src/components/pages/admin.yml
+++ b/src/components/pages/admin.yml
@@ -1,9 +1,9 @@
 settingsTabTitle:
   en: Settings
   de: Einstellungen
-usersTabTitle:
-  en: Users
-  de: Benutzer
+userAccountsTabTitle:
+  en: User accounts
+  de: Benutzerkonten
 storagePlansTabTitle:
   en: Storage plans
   de: Speicherpläne
