--- a/src/components/admin/user-accounts-tab.yml
+++ b/src/components/admin/user-accounts-tab.yml
@@ -1,12 +1,12 @@
-lastLogIn:
-  en: Last log in
-  de: Zuletzt angemeldet
-expires:
-  en: Expires
-  de: Verfallsdatum
+lastLogin:
+  en: Last login
+  de: Letzte Anmeldung
+expiryDate:
+  en: Expiry date
+  de: Ablaufdatum
 accountLocked:
   en: Locked
-  de: Ausgesperrt
+  de: Gesperrt
 roles:
   en: Roles
   de: Rollen
@@ -19,18 +19,18 @@ externalUserId:
 connectedUser:
   en: Connected user
   de: Verknüpfter Benutzer
-internalUsers:
-  en: Internal users
-  de: Interne Benutzer
-externalUsers:
-  en: External users
-  de: Externe Benutzer
-storageUsers:
-  en: Users with storage
-  de: Benutzer mit Speicher
-closedAccountUsers:
+activeAccounts:
+  en: Active accounts
+  de: Aktive Konten
+externalAccounts:
+  en: External accounts
+  de: Externe Konten
+accountsWithStorage:
+  en: Accounts with storage
+  de: Konten mit Speicher
+closedAccounts:
   en: Closed accounts
-  de: Geschlossene Kontos
+  de: Geschlossene Konten
 selectPlan:
   en: Select plan
   de: Plan auswählen
