EDU-1055 Use actual German text

--- a/src/plugins/markdown-with-image/markdown-with-image.yml
+++ b/src/plugins/markdown-with-image/markdown-with-image.yml
@@ -15,7 +15,7 @@ imageWidth:
   de: Bildbreite
 imageWidthInfo:
   en: Represents the width taken by the image, from the total allocated space
-  de: Represents the width taken by the image, from the total allocated space [but in German]
+  de: Repräsentiert die Breite, die das Bild einnimmt, gemessen an der Gesamtbreite des Abschnitts
 imagePosition:
   en: Image position
   de: Bildstelle
