EDU-1035 Give user feedback after save operations

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -477,3 +477,6 @@ createDocument:
 enterRoom:
   en: Enter room
   de: Raum betreten
+changesSavedSuccessfully:
+  en: Your changes have been saved
+  de: Deine Änderungen wurden gespeichert
