NOTICKET: Streamline button to create room with button to create document in room and button to add room members

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -474,6 +474,9 @@ addFavorite:
 createDocument:
   en: Create document
   de: Dokument erstellen
+createRoom:
+  en: Create room
+  de: Raum erstellen
 enterRoom:
   en: Enter room
   de: Raum betreten
