EDU-1060 Change page headline

--- a/src/components/pages/search.yml
+++ b/src/components/pages/search.yml
@@ -1,7 +1,7 @@
-headlineSearching:
+searching:
   en: Searching ...
   de: Suchen ...
-headlineDocumentsFound:
+documentsFound:
   en: |
     {count, plural, =1 {# document} other {# documents}} found
   de: |
