EDU-1060 Use same link text for adding tag filters and make close icon easier to click

--- a/src/components/tag-selector.yml
+++ b/src/components/tag-selector.yml
@@ -1,7 +1,4 @@
-linkTextSelectMore:
-  en: + More
-  de: + Mehr
-linkTextSelectFirst:
+linkText:
   en: + Add tag filter
   de: + Tag-Filter hinzufügen
 searchPlaceholder:
