--- a/src/components/pages/docs.yml
+++ b/src/components/pages/docs.yml
@@ -7,9 +7,9 @@ newDocument:
 initialAuthor:
   en: Initial author
   de: Erstautor
-placeholder:
-  en: Search by title or initial author
-  de: Nach Titel oder Erstautor suchen
+filterPlaceholder:
+  en: Filter by title or initial author
+  de: Nach Titel oder Erstautor filtern
 badges:
   en: Badges
   de: Kennzeichen
