EDU-1074 Rework password reset request flow

--- a/src/components/pages/reset-password.yml
+++ b/src/components/pages/reset-password.yml
@@ -1,16 +1,13 @@
-requestReset:
-  en: Request reset
-  de: Reset anfordern
-resetInProgressConfirmation:
-  en: We have received your request.
-  de: Deine Anfrage ist bei uns eingegangen.
-resetInProgressNextSteps:
-  en: |
-    In case the provided email address is registered with our website, you will receive a
-    message containing the next steps in order to generate a new password within the next minutes.
-  de: |
-    Falls die von dir angegebene E-Mail-Adresse bei uns registriert ist, wirst du in Kürze eine
-    Nachricht von uns erhalten mit den nächsten Schritte, um ein neues Kennwort zu generieren.
-redirectMessage:
-  en: You will be redirected to the <0>login page</0> in {seconds, plural, =1 {# second} other {# seconds}}.
-  de: Du wirst in {seconds, plural, =1 {# Sekunde} other {# Sekunden}} auf die <0>Anmeldeseite</0> weitergeleitet.
+newPassword:
+  en: New password
+  de: Neues Kennwort
+requestPasswordReset:
+  en: Change password
+  de: Kennwort ändern
+completedMessageTitle:
+  en: Your password was changed successfully.
+  de: Dein Kennwort wurde erfolgreich geändert.
+completedMessageSubTitle:
+  en: TBD
+  de: TBD
+
