EDU-1074 Set confirmation text and set user after auto-login

--- a/src/components/pages/reset-password.yml
+++ b/src/components/pages/reset-password.yml
@@ -5,9 +5,8 @@ requestPasswordReset:
   en: Change password
   de: Kennwort ändern
 completedMessageTitle:
-  en: Your password was changed successfully.
-  de: Dein Kennwort wurde erfolgreich geändert.
+  en: Password changed successfully!
+  de: Kennwort erfolgreich geändert!
 completedMessageSubTitle:
-  en: TBD
-  de: TBD
-
+  en: You are now logged in with your updated account. You can navigate to your personal dashboard by clicking the button below.
+  de: Du bist nun mit deinem aktualisierten Konto angemeldet. Mit Klick auf den Button unten kannst du zu deinem persönlichen Dashboard navigieren.
