--- a/src/plugins/catalog/catalog.yml
+++ b/src/plugins/catalog/catalog.yml
@@ -42,5 +42,5 @@ catalog:
     en: External URL
     de: Externe URL
   adoptDocumentTitle:
-    en: Adopt as title
-    de: Als Titel übernehmen
+    en: Use as title
+    de: Als Titel benutzen
