--- a/src/components/sorting-selector.yml
+++ b/src/components/sorting-selector.yml
@@ -2,6 +2,9 @@ sortingSelector:
   changeSortingValue:
     en: Change sorting
     de: Sortierung ändern
-  changeSortingDirection:
-    en: Change sorting direction
-    de: Sortierungsrichtung ändern
+  changeSortingDirectionAscending:
+    en: Change to ascending order
+    de: In aufsteigende Reihenfolge sortieren
+  changeSortingDirectionDescending:
+    en: Change to descending order
+    de: In absteigende Reihenfolge sortieren
