EDU-1069 Add documents tab to dashboard

--- a/src/components/pages/dashboard.yml
+++ b/src/components/pages/dashboard.yml
@@ -8,6 +8,9 @@ dashboard:
   settingsTabTitle:
     en: Settings
     de: Einstellungen
+  documentsTabTitle:
+    en: Documents
+    de: Dokumente
   roomsTabTitle:
     en: Rooms
     de: Räume
