--- a/src/components/dashboard/settings-tab.yml
+++ b/src/components/dashboard/settings-tab.yml
@@ -1,4 +1,4 @@
-accountSettingsTab:
+settingsTab:
   info:
     en: Here you can update your account information. The personal information is publicly accessible through your <0>profile page</0>.
     de: Hier kannst du deine Konto-Informationen bearbeiten. Die Persönlichen Daten sind auf deiner <0>Profilseite</0> öffentlich sichtbar.
