EDU-1069 Add option to toggle for own documents only

--- a/src/components/dashboard/documents-tab.yml
+++ b/src/components/dashboard/documents-tab.yml
@@ -5,6 +5,9 @@ documentsTab:
   noDocuments:
     en: You have not contributed to any public documents yet.
     de: Du hast noch keine öffentliche Dokumente bearbeitet.
+  ownDocumentOnly:
+    en: My documents only
+    de: Nur meine Dokumente
   documentsCount:
     en: |
       {count, plural, =1 {# document} other {# documents}}
