--- a/src/components/sorting-selector.yml
+++ b/src/components/sorting-selector.yml
@@ -4,7 +4,7 @@ sortingSelector:
     de: Sortierung ändern
   changeSortingDirectionAscending:
     en: Change to ascending order
-    de: In aufsteigende Reihenfolge sortieren
+    de: Zu aufsteigender Sortierung wechseln
   changeSortingDirectionDescending:
     en: Change to descending order
-    de: In absteigende Reihenfolge sortieren
+    de: Zu absteigender Sortierung wechseln
