EDU-1070 Add menu item for creating document in page header

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -474,6 +474,9 @@ common:
   createDocument:
     en: Create document
     de: Dokument erstellen
+  newDocument:
+    en: New document
+    de: Neues Dokument
   createRoom:
     en: Create room
     de: Raum erstellen
