EDU-1070 Support cloning document from doc page

--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -26,3 +26,6 @@ doc:
   commentsControlPanelTooltip:
     en: Comments
     de: Komentare
+  duplicateDocument:
+    en: Duplicate document
+    de: Dokument duplizieren
