--- a/src/components/user-steps-form.yml
+++ b/src/components/user-steps-form.yml
@@ -27,5 +27,5 @@ userStepsForm:
 
       Der Code ist **{validityInMinutes} lang** gültig.
   gotoDashboard:
-    en: Show my personal dashboard
-    de: Mein persönliches Dashboard anzeigen
+    en: Show my dashboard
+    de: Mein Dashboard anzeigen
