--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react-region-select": "^2.3.0",
     "read-all-stream": "^3.1.0",
     "serialize-error": "^11.0.0",
+    "spdx-license-list": "^6.6.0",
     "stream-to-array": "^2.3.0",
     "thenby": "^1.3.4",
     "toad-scheduler": "^2.2.0",
