EDU-1094 Improve track mixer layout, for clarity

--- a/src/components/media-player/track-mixer-editor.yml
+++ b/src/components/media-player/track-mixer-editor.yml
@@ -5,3 +5,6 @@ trackMixerEditor:
   manageVolumePresets:
     en: Manage volume presets
     de: Lautstärke-Voreinstellungen bearbeiten
+  trackDurations:
+    en: Track durations
+    de: Spur-Zeitdauern
