EDU-1093 Allow room owners to see member emails

--- a/src/components/pages/room.yml
+++ b/src/components/pages/room.yml
@@ -53,3 +53,6 @@ room:
   inviteMembersButton:
     en: Invite members
     de: Mitglieder einladen
+  pendingInvitation:
+    en: Pending invitation
+    de: Ausstehende Einladung
