--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "markdown-it-anchor": "^8.6.5",
     "md5": "^2.3.0",
     "memoizee": "^0.4.15",
+    "midi-player-js": "^2.0.16",
     "mime": "^3.0.0",
     "minio": "^7.0.32",
     "moment": "^2.29.4",
@@ -101,6 +102,7 @@
     "stream-to-array": "^2.3.0",
     "thenby": "^1.3.4",
     "toad-scheduler": "^2.2.0",
+    "tone": "^14.7.77",
     "umzug": "^3.2.1",
     "xmldom": "^0.6.0",
     "xpath": "^0.0.32"
