EDU-1094 Set info translations

--- a/src/components/media-player/timeline.yml
+++ b/src/components/media-player/timeline.yml
@@ -1,4 +1,4 @@
 timeline:
   markersBarPlaceholder:
     en: Hover to see marker
-    de: Bitte hover to see marker
+    de: Bewege die Maus über den Streifen, um die Marker-Position zu sehen
