--- a/src/components/media-player/media-range-selector.yml
+++ b/src/components/media-player/media-range-selector.yml
@@ -5,18 +5,24 @@ mediaRangeSelector:
   selectRangeLabel:
     en: Set current playback position
     de: Setze die aktuelle Wiedergabeposition
-  setAs:
-    en: set as
-    de: Setze als
-  setAsStart:
-    en: as start time
-    de: als Anfangszeit
-  setAsEnd:
-    en: as end time
-    de: als Endezeit
-  endTimecode:
+  as:
+    en: as
+    de: als
+  startTime:
+    en: Start time
+    de: Anfangszeit
+  endTime:
     en: End time
     de: Endezeit
+  start:
+    en: Start
+    de: Anfang
+  end:
+    en: End
+    de: Ende
+  milliseconds:
+    en: milliseconds
+    de: Millisekunden
   loadingMessage:
     en: Determining media information ...
     de: Medieninformationen werden ermittelt ...
