EDU-1095 Support setting description for catalog item links

--- a/src/plugins/catalog/catalog.yml
+++ b/src/plugins/catalog/catalog.yml
@@ -30,8 +30,8 @@ catalog:
     en: Add item
     de: Eintrag hinzufügen
   linkSource:
-    en: Link source
-    de: Link-Quelle
+    en: Link type
+    de: Link-Typ
   documentLink:
     en: document link
     de: Dokument-Link
