EDU-1095 Change translation

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -505,4 +505,4 @@ common:
     de: Vorschau-Bild-URL
   dragToReorder:
     en: Drag to reorder
-    de: Durch Bewegen neu anordnen
+    de: Mit Drag&Drop verschieben
