EDU-1115 Change translation

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -491,9 +491,9 @@ common:
   filter:
     en: Filter
     de: Filter
-  playerSettings:
-    en: Player settings
-    de: Player-Einstellungen
+  player:
+    en: Player
+    de: Player
   initialVolume:
     en: Initial volume
     de: Anfangslautstärke
