--- a/src/components/resource-picker/wikimedia/wikimedia-search-screen.yml
+++ b/src/components/resource-picker/wikimedia/wikimedia-search-screen.yml
@@ -1,28 +1,7 @@
-mediaLibrarySearch:
-  searchTerm:
-    en: Search term
-    de: Suchbegriff
-  searchFileType_image:
-    en: Image
-    de: Bild
-  searchFileType_video:
-    en: Video
-    de: Video
-  searchFileType_audio:
-    en: Audio
-    de: Audio
-  searchFileType_pdf:
-    en: PDF
-    de: PDF
-  searchFileType_text:
-    en: Text
-    de: Text
-  searchFileType_other:
-    en: Other
-    de: Andere
+wikimediaSearchScreen:
   searchInvitationHeader:
-    en: Search in the Media library
-    de: Suche in der Medien-Bibliothek
+    en: Search in the Wikimedia database
+    de: Suche in der Wikimedia-Datenbank
   searchInvitationDescription:
     en: Enter a search term in the field above and select whether you want to search for images, videos, etc.
     de: Gib einen Suchbegriff in das Feld oben ein und wähle aus, ob du nach Bildern, Videos, etc. suchen möchtest
