EDU-1115 Use panels in all extended media player plugins

--- a/src/plugins/interactive-media/interactive-media.yml
+++ b/src/plugins/interactive-media/interactive-media.yml
@@ -2,6 +2,9 @@ interactiveMedia:
   name:
     en: Interactive media
     de: Interaktive Medien
+  chapters:
+    en: Chapters
+    de: Kapitel
   answers:
     en: Answers
     de: Antworten
