--- a/src/plugins/media-slideshow/media-slideshow.yml
+++ b/src/plugins/media-slideshow/media-slideshow.yml
@@ -2,6 +2,9 @@ mediaSlideshow:
   name:
     en: Media slideshow
     de: Medien-Slideshow
+  segments:
+    en: Segments
+    de: Segmente (oder Abschnitte?)
   chapterType_image:
     en: image
     de: Bild
@@ -20,21 +23,21 @@ mediaSlideshow:
   imageFitInfoMarkdown:
     en: |
       __cover__
-  
+
       Scales the image (while preserving its ratio) to the smallest possible
       size to fill the display area, leaving no empty space.
-  
+
       __contain__
-  
+
       Scales the image as large as possible within the display
       area without cropping or stretching the image.
     de: |
       __Abdecken__
-  
+
       Skaliert das Bild (unter Beibehaltung der Proportionen) auf die kleinstmögliche
       Größe, um den Anzeigebereich so auszufüllen, dass kein Leerraum bleibt.
-  
+
       __Umfassen__
-  
+
       Skaliert das Bild so groß wie möglich innerhalb des Anzeigebereichs,
       ohne das Bild zu beschneiden oder zu strecken.
