EDU-1119 Change external link source input to url-input in catalog plugin

--- a/src/plugins/catalog/catalog.yml
+++ b/src/plugins/catalog/catalog.yml
@@ -18,10 +18,10 @@ catalog:
     en: Hover effect
     de: Hover-Effekt
   hoverEffect_none:
-    en: No effect
+    en: no effect
     de: Kein Effekt
   hoverEffect_colorizeZoom:
-    en: Color and zoom
+    en: color and zoom
     de: Färben und Zoomen
   itemNumber:
     en: Item {number}
@@ -29,18 +29,18 @@ catalog:
   addItem:
     en: Add item
     de: Eintrag hinzufügen
-  linkSource:
-    en: Link type
-    de: Link-Typ
+  linkSourceType:
+    en: Item type
+    de: Eintragstyp
   documentLink:
     en: document link
     de: Dokument-Link
-  externalLink:
-    en: external link
-    de: Externer Link
-  externalUrl:
-    en: External URL
-    de: Externe URL
+  link:
+    en: link
+    de: Link
+  linkSource:
+    en: Link source
+    de: Link-Quelle
   adoptDocumentTitle:
     en: Use as title
     de: Als Titel benutzen
