EDU-1090 Unify file names and folder structure

--- a/src/components/markdown-input.yml
+++ b/src/components/markdown-input.yml
@@ -2,6 +2,6 @@ markdownInput:
   previewArea:
     en: Preview area
     de: Vorschaubereich
-  resourcePickerTooltip:
+  resourceSelectorTooltip:
     en: Click here to insert a link to a selected resource
     de: Klicke hier, um einen Link zu einer ausgewählten Ressource einzufügen
