EDU-1090 Simplify and unify search info

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -437,14 +437,14 @@ common:
     en: |
       {
       resultCount, select,
-      0 {Searching for the term <0>{searchTerm}</0> yielded no results}
-      other {You are seeing {resultCount, plural, =1 {# result} other {# results}} for the search term <0>{searchTerm}</0>}
+      0 {No results found for: {searchTerm}}
+      other {Found {resultCount, plural, =1 {# result} other {# results}} for: {searchTerm}}
       }
     de: |
       {
       resultCount, select,
-      0 {Die Suche nach dem Begriff <0>{searchTerm}</0> erzielte keine Ergebnisse}
-      other {Du siehst {resultCount, plural, =1 {# Ergebnis} other {# Ergebnisse}} für den Suchbegriff <0>{searchTerm}</0>}
+      0 {Keine Ergebnisse gefunden für: {searchTerm}}
+      other {{resultCount, plural, =1 {# Ergebnis} other {# Ergebnisse}} gefunden für: {searchTerm}}
       }
   more:
     en: more ...
