EDU-1132 Show document tags in a tag cloud

--- a/src/components/pages/redaction.yml
+++ b/src/components/pages/redaction.yml
@@ -2,6 +2,9 @@ redaction:
   documentsTabTitle:
     en: Documents
     de: Dokumente
+  documentTagsTabTitle:
+    en: Document tags
+    de: Dokument-Tags
   initialAuthor:
     en: Initial author
     de: Erstautor
