--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -521,3 +521,9 @@ common:
   dropDifferentFileInvitation:
     en: Drag a different file here
     de: Ziehe eine andere Datei hierher
+  useSearchToChangeFile:
+    en: Use the search above to select a different file
+    de: Benutze die Suche oben, um eine andere Datei auszuwählen
+  searchInvitationDescription:
+    en: Enter your search term above
+    de: Gib deinen Suchbegriff oben ein
