--- a/src/components/resource-selector/media-library/media-library-upload-screen.yml
+++ b/src/components/resource-selector/media-library/media-library-upload-screen.yml
@@ -20,9 +20,9 @@ mediaLibraryUploadScreen:
   licensesRequired:
     en: Please select at least one license
     de: Bitte wähle mindestens eine Lizenz aus
-  tags:
-    en: Tags
-    de: Tags
+  tagsInfo:
+    en: Specify search terms with which your resource can be found by other users
+    de: Gib Suchbegriffe an, mit denen deine Ressource von anderen Nutzern gefunden werden kann
   tagsRequired:
     en: Please provide at least one tag
     de: Bitte gib mindestens einen Tag an
