--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -77,6 +77,9 @@ common:
   language:
     en: Language
     de: Sprache
+  languages:
+    en: Languages
+    de: Sprachen
   proposedSectionsAlert:
     en: |
       Apply or discard the proposed sections. Unapplied sections are
@@ -524,3 +527,6 @@ common:
   searchInvitationDescription:
     en: Enter your search term above
     de: Gib deinen Suchbegriff oben ein
+  licenses:
+    en: Licenses
+    de: Lizenzen
